--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:migrate": "drizzle-kit migrate",
     "drizzle:studio": "drizzle-kit studio",
+    "seed": "npx tsx src/db/seed.ts",
     "db:seed": "npx tsx src/db/seed.ts",
     "db:create-admin": "npx tsx src/db/create-admin-user.ts",
     "db:ensure-superadmin": "npx tsx src/db/ensure-superadmin.ts",
@@ -28,9 +29,11 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/leaflet": "^1.9.21",
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
+    "leaflet": "^1.9.4",
     "lexical": "^0.38.2",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
@@ -39,6 +42,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.13"
